--- a/src/views/inter.css
+++ b/src/views/inter.css
@@ -49,3 +49,11 @@ border: none;
     background-color:#19335A !important ;
     color: white !important;
 }
+.nav-tabs .nav-link.active{
+    color:#fff !important;
+    background-color: #19335A !important;
+    border-color: #dee2e6 #dee2e6 #19335A !important;
+}
+td{
+    border-bottom: 2px solid #19335A !important;
+}
